@@ -51,6 +51,7 @@ NOTE: sorry, this is very raw :)
  
  - what to do with sustain? needs all_sound_off perhaps?
  - make portamento more usable
+ - many controller effects would gain from being accessible somewhere else than in control editor
  
  - tabbing though fields in select notes dialog should select their content
  - too easy for top bar stuff to gain focus - enter should have focus go back to main pane
@@ -96,14 +97,16 @@ NOTE: sorry, this is very raw :)
  ## can't undo 'paste'
  ## crash when emptying tempo in control view [reported, not tested] 
 
-* undoing sign changes in score doesn't quite work (at least when using shift+arrows)
 * update translation
+* numberpressed action undo is totally broken
+
+= score editor : add a note... give it an accidental sign. Move the note up or down with arrow key. Undo - accidental sign is gone.
 
 + make aria files still smaller by using more default values
 
-- setting sharp/flat sign manually sometimes doesn't work (when it's possible to display the note on a level with no sign)
++ many Actions are only used on selected notes, yet they offer an implementation for single notes. This implementation was never tested and may be buggy
 
-+ do something if opening docs fail!
+- setting sharp/flat sign manually sometimes doesn't work (when it's possible to display the note on a level with no sign)
 
 + when wait dialog appears, you can still edit tracks and do operations that may be harmful to current process.
     yet you can't make it modal otherwise the background process stops.
